<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="azimut_hint">10</string>
    <string name="azimut">Azimut</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>
    <string name="pitch_hint">20</string>
    <string name="roll_hint">30</string>
    <string name="gps">GPS</string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
</resources>