<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <GridLayout
        android:layout_toEndOf="@id/viewFinder"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:columnCount="2">
        <TextView
            android:text="@string/azimut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/azimut"
            android:hint="@string/azimut_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/pitch"
            android:hint="@string/pitch_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/roll"
            android:hint="@string/roll_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>

</RelativeLayout>